tree-sitter-skript/grammar.js
  word: $ => $.identifier,

  // A comment after a section colon (`on join: # note`) is ambiguous with a
  // standalone comment that follows a body-less section. Both readings are
  // legal; GLR settles it on the next token (an INDENT means the section had a
  // body after all).
    source_file: $ => repeat($._top_level),

    _top_level: $ => choice($._structure, $.comment, $.block_comment),

    // ---------------------------------------------------------------- structures

    command: $ => seq(
      alias('command', $.keyword),
      field('name', $.command_name),
      repeat(choice(
        field('argument', $.command_argument),
        $._content_item,
      )),
      $._section_colon,
      optional($.comment),
      optional(field('body', $.entry_body)),
    ),

    command_name: _ => token(prec(2, seq(optional('/'), /[^\s<>:#\[\]"]+/))),

    // `<text>`, `<name: text>`, `<text = default>`, `<name: text = default>`.
    // The delimiters carry an explicit precedence so they beat the `<` / `>`
    // comparison operators, which Skript genuinely uses (`while {_x} < 5:`).
    // Because that only applies in the command-header state, `usage: /home
    // <name>` still lexes `<` as an operator.
    //
    // The inside is kept as one token rather than being split into
    // name/type/default: `<x:number>` and `<text="success 2">` are both legal
    // and pulling them apart in the grammar needs lookahead that LR does not
    // have. The language server splits the spec when it indexes the command.
    command_argument: $ => seq(
      alias(token(prec(3, '<')), $.punctuation),
      optional(field('spec', alias(token(prec(1, /[^<>\n]+/)), $.argument_spec))),
      alias(token(prec(3, '>')), $.punctuation),
    ),

    // `function name(a: text, b: number = 1) :: item:`
    // All three return markers are live in Skript: `::`, `->`, and ` returns `.
    function: $ => seq(
      optional(alias('local', $.keyword)),
      alias('function', $.keyword),
      // An option may stand in for any part of the header — Skript substitutes
      // `{@…}` before parsing, so `function {@sig}) :: boolean:` is legal. The
      // parentheses are therefore optional rather than required; a header that
      // is genuinely malformed is reported by the language server, not by a
      // parse error that would poison the whole file's outline and folding.
      field('name', choice($.identifier, $.option_ref)),
      optional('('),
      optional(field('parameters', $.parameter_list)),
      optional(')'),
      optional(seq(
        alias(choice('::', '->', 'returns'), $.return_marker),
        field('return_type', alias(/[^:#\n]+/, $.type)),
      )),
      $._section_colon,
      optional($.comment),
      optional(field('body', $.block)),
    ),

    parameter_list: $ => seq($.parameter, repeat(seq(',', $.parameter))),

    parameter: $ => seq(
      field('name', $.identifier),
      ':',
      field('type', alias(/[^,)=]+/, $.type)),
      optional(seq('=', field('default', $.default_value))),
    ),

    // Defaults may be list literals: `(xs: integers = (1, 7))`.
    default_value: _ => repeat1(choice(
      token(/[^,()]+/),
      seq('(', optional(token(/[^()]+/)), ')'),
    )),

    options: $ => seq(
      alias('options', $.keyword),
      $._section_colon,
      optional($.comment),
      optional(field('body', $.entry_body)),
    ),

    variables: $ => seq(
      alias('variables', $.keyword),
      $._section_colon,
      optional($.comment),
      optional(field('body', $.assignment_body)),
    ),

    aliases: $ => seq(
      alias('aliases', $.keyword),
      $._section_colon,
      optional($.comment),
      optional(field('body', $.assignment_body)),
    ),

    // skript-reflect's `import:` section; its body is Java type names.
    using: $ => seq(
      alias('using', $.keyword),
      field('feature', alias(/[^#\n]+/, $.experiment)),
      optional($.comment),
      $._newline,
    ),

    auto_reload: $ => seq(
      alias(/auto(matically)?[ \t]+reload/, $.keyword),
      optional(alias(/(this|the)[ \t]+script/, $.keyword)),
      optional($.comment),
      $._newline,
    ),

    // Any other top-level section is an event: `on join:`, `first join:`,
    // `on damage of player with priority high:`.
    // Skript registers this as
    //   `[on] [uncancelled|cancelled|(any|all)] <.+> [with priority …]`
    // so the modifier follows `on` rather than preceding it.
    event: $ => seq(
      optional(alias('on', $.keyword)),
      optional(field('modifier', $.event_modifier)),
      field('name', $._content),
      optional(field('priority', $.event_priority)),
      $._section_colon,
      optional($.comment),
      optional(field('body', $.block)),
    ),

    event_modifier: _ => token(prec(2, /(uncancelled|cancelled|any|all)[ \t]+/)),

    event_priority: _ => token(prec(2, /with[ \t]+priority[ \t]+(lowest|low|normal|high|highest|monitor)/)),

    // ------------------------------------------------------------------ bodies

    // A generic indented block: triggers, if/else, loops, while, addon sections.
    block: $ => seq(
      $._indent,
      repeat1($._block_item),
      $._dedent,
    ),

    _block_item: $ => choice($.section, $.statement, $.comment, $.block_comment),

    // Any line ending in a section colon opens a nested block. We do NOT
    // enumerate section keywords: any addon can register an effect-section.
    section: $ => seq(
      field('header', $._content),
      $._section_colon,
      optional($.comment),
      optional(field('body', $.block)),
    ),

    statement: $ => seq($._content, optional($.comment), $._newline),

    // `key: value` bodies — command entries, `options:`, Skript config files.
    entry_body: $ => seq(
      $._indent,
      repeat1(choice($.entry, $.entry_section, $.section, $.statement, $.comment, $.block_comment)),
      $._dedent,
    ),

    entry: $ => seq(
      field('key', $.entry_key),
      ':',
      optional(field('value', $._content)),
      optional($.comment),
      $._newline,
    ),

    // Nested `key:` sections — legal in `options:` since Skript 2.7, the shape
    // of Skript's own config.sk, and how `trigger:` sits inside a command.
    entry_section: $ => seq(
      field('key', $.entry_key),
      $._section_colon,
      optional($.comment),
      optional(field('body', $.block)),
    ),

    entry_key: _ => token(prec(1, /[A-Za-z_][A-Za-z0-9 _.\-]*/)),

    // `variables:` and `aliases:` bodies use `=`, not `:`.
    assignment_body: $ => seq(
      $._indent,
      repeat1(choice($.assignment, $.statement, $.comment, $.block_comment)),
      $._dedent,
    ),

    // Higher precedence than a bare statement so that `{score} = 100` inside a
    // `variables:` block is an assignment rather than content containing an
    // `=` operator.
    assignment: $ => prec(1, seq(
      field('target', choice($.variable, alias(token(prec(1, /[A-Za-z_][^=#\n]*/)), $.alias_name))),
      '=',
      field('value', $._content),
      optional($.comment),
      $._newline,
    )),

    // ----------------------------------------------------------------- content

    _content: $ => repeat1($._content_item),

    _content_item: $ => choice(
      $.string,
      $.variable,
      $.option_ref,
      $.function_call,
      $.duration,
      $.number,
      $.boolean,
      $.loop_value,
      $.event_value,
      $.command_arg_ref,
      // `&6[Server]&r` in an `options:` value, a `description:` / `usage:`
      // entry, or an alias definition has no enclosing string, and used to lex
      // as `operator(&) number(6)` — mis-tokenised, not merely uncoloured, in
      // the single commonest place people write colour codes.
      //
      // The token is unchanged from its use inside `string`: it already
      // requires the code character *immediately* after the `&`, so `a & b` and
      // `&&` still lex as the operator. Listed before `$.operator` because
      // tree-sitter breaks precedence-and-length ties by rule order.
      $.legacy_color,
      alias($._bare_format_tag, $.format_tag),
      $.identifier,
      $.word,
      $.operator,
      $.punctuation,
    ),

    // `giveApple("Banana", 4)` — the paren must be immediate.
    function_call: $ => prec(2, seq(
      field('name', $.identifier),
      token.immediate('('),
      optional(field('arguments', $._content)),
      ')',
    )),

    // ------------------------------------------------------------------ atoms

    string: $ => seq(
      '"',
      repeat(choice(
        $.escape_sequence,
        $.interpolation,
        $.format_tag,
        $.legacy_color,
        $._string_text,
      )),
      '"',
    ),

    // Skript escapes by doubling: `""` is a literal quote, `%%` a literal percent.
    escape_sequence: _ => token(prec(3, choice('""', '%%'))),

    // `%player's tool%`. Inside the percent signs Skript switches back to code
    // context, so a nested string is legal: `"%uuid of world "world"%"`.
    interpolation: $ => seq(
      '%',
      repeat(choice(
        $.string,
        $.variable,
        $.option_ref,
        alias(token(prec(-1, /[^%"{}\n]+/)), $.interpolation_text),
      )),
      '%',
    ),

    // `<red>`, `<bold>`, `<#FF00AA>`, `<link:https://…>`, `<tooltip:hi>`
    format_tag: _ => token(prec(2, seq('<', /[^<>%"\n]*/, '>'))),

    // `<red>`, `<#FF00AA>`, `<link:…>` *outside* a string — a `description:`
    // value, an `options:` value, an alias definition.
    //
    // Deliberately far stricter than `format_tag`, which is only ever reached
    // inside a string where `<` cannot be an operator. Out here `<` is also
    // Skript's less-than, and `format_tag`'s `[^<>%"\n]*` body would happily
    // swallow `< 5 and {_b} >` out of `if {_a} < 5 and {_b} > 3:`. So the tag
    // must open with a tag character *immediately* after the `<`, and the name
    // may not contain whitespace — every `<` comparison in the 540-file corpus
    // is written `< ` with a space, and every real tag is written without one.
    //
    // The body excludes `<`, `>`, `"`, `{`, `}` and newline, so a tag can never
    // span two tags, swallow a string or a variable, or cross a line into a
    // section colon.
    //
    // prec(1), not prec(2): it must beat `operator` (prec 0) but lose to
    // `command_argument`'s `<` (prec 3), so a command header's argument
    // delimiter is never re-read as a tag.
    legacy_color: _ => token(prec(2, choice(
      seq('&', /[0-9a-fk-orA-FK-OR]/),
      seq('&#', /[0-9a-fA-F]{6}/),
    ))),

    _string_text: _ => token(prec(-1, choice(/[^"%<&\n]+/, '<', '&'))),

    // `{x}` global · `{_x}` local · `{-x}` ephemeral · `{x::*}` list
    variable: $ => seq(
      '{',
      optional(field('scope', $.variable_scope)),
      optional(field('name', $.variable_name)),
      '}',
    ),

    variable_scope: _ => token.immediate(choice('_', '-')),

    // A variable name may nest another variable — `{_test::{_x}}` is legal —
    // and may interpolate — `{home::%uuid of player%}`.
    variable_name: $ => repeat1(choice(
      $.interpolation,
      $.variable,
      $.list_separator,
      alias(token(prec(-1, /[^{}%:\n]+/)), $.variable_text),
      alias(':', $.variable_text),
    )),

    list_separator: _ => token(prec(2, '::')),

    // `{@my option}` — compile-time option substitution, not a variable.
    option_ref: $ => seq(
      token(prec(3, '{@')),
      field('name', alias(/[^{}\n]+/, $.option_name)),
      '}',
    ),

    // `5 seconds`, `2 ticks`, `1.5 minutes`
    duration: _ => token(prec(2, /\d+(\.\d+)?[ \t]+(tick|second|minute|hour|day|week|month|year)s?/)),

    number: _ => token(prec(1, /-?\d+(\.\d+)?/)),

    // Plain string alternatives so that tree-sitter's keyword extraction (see
    // the `word` property above) applies: `truely` lexes as an identifier and
    // never as `true` + `ly`.
    // `on`/`off`/`yes`/`no` are deliberately excluded: `on` opens every event,
    // and mis-colouring them is worse than not colouring them.
    boolean: _ => choice('true', 'false'),

    // `loop-player`, `loop-value-2`, `loop-index`
    event_value: _ => token(prec(2, /event-[a-zA-Z][a-zA-Z0-9\-]*/)),

    // `arg-1`, `arg-text`, `argument-2`
    command_arg_ref: _ => token(prec(2, /arg(ument)?-[a-zA-Z0-9]+/)),

    identifier: _ => /[a-zA-Z_À-￿][a-zA-Z0-9_À-￿]*/,

    // Anything else that is not whitespace or structural punctuation. Must
    // contain at least one non-identifier character — see NON_IDENT_CHAR.
    word: _ => token(seq(repeat(WORD_CHAR), NON_IDENT_CHAR, repeat(WORD_CHAR))),

    // Plain strings, no precedence: a one-character operator and a
    // one-character word tie on length, and tree-sitter then prefers the
    // string token, so `5 - 3` yields an operator while `non-persistent`
    // stays a single word.
    operator: _ => choice('+', '-', '*', '/', '^', '=', '!', '&', '<', '>'),

    punctuation: _ => choice(',', '(', ')', '[', ']', ':', '%'),

    // `# comment`. `##` is an escaped literal hash and does not open one, but
    // that only matters inside strings and variable names — and this token is
    // not an `extra`, so it is never reachable there.
    comment: _ => token(seq('#', /[^\n]*/)),
  },
});
